--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: "WinterSnow-Regular";
     src: url('./font/WinterSnow-Regular.woff') format('woff');
 }
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
 h1 {
     font-family: "WinterSnow-Regular", sans serif;
@@ -31,7 +32,9 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-}
+
+      }
+
 .intro{
     display:flex;
     margin-top: 2rem;
@@ -41,13 +44,16 @@ body {
     align-items:center ;
     color: white;
     gap:1rem;
-    background-color: rgba(188, 143, 143, 0.672);
+    background-color: rgba(49, 47, 47, 0.672);
     border-radius: 12px;
-    padding-top: 1rem;
-    padding-left: 3rem;
-    /* permettre de scroller dans ta div */
+    padding-top: 2rem;
     overflow: auto;
+    font-family: "Great Vibes", cursive;
+    font-weight: 950;
+    font-style: normal;
+   
 }
+
 /* enlever la scrollbar pour google chrome*/
 .intro::-webkit-scrollbar{
     display: none;
@@ -57,39 +63,42 @@ body {
 .intro {
     -ms-overflow-style: none; 
     overflow: -moz-scrollbars-none; 
-    
+  
 
 }
 
 .logofbook {
-    width: 8rem;
-    height: 7rem;
+    width: 3rem;
+    height: 4rem;
+    
 }
 
 .logoduX{
     width: 3rem;
     height: 4rem;
 }
+.logodiscord{
+    width: 3rem;
+    height: 4rem;
+}
+
 
 header {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-  
+    margin-bottom: 50px;
 }
 
 nav {
-
     width: 85%;
     height: 100px;
-    background-color: rgba(188, 143, 143, 0.672);
     padding: 1rem;
     margin-right: 1rem;
     border-radius: 12px;
     justify-content: center;
     align-items: center;
     justify-content: center;
-   
 }
 
 ul {
@@ -103,7 +112,8 @@ ul {
 
 a {
     text-decoration: none;
-    color: black;
+    color:white;
+    font-size:150%; 
 }
 
 body .logoimage {
@@ -117,18 +127,18 @@ body .logoimage {
 /*mon footer*/
 footer {
     width: 80%;
-    border: 1px #3a3939 solid;
+    border: 3px #242222 solid;
     text-align: center;
     align-self: center;
     margin-top : auto;
-    background-color: #f3ecec;
+    background-color: rgba(49, 47, 47, 0.672);
     text-decoration: none;
     padding: 0.5rem;
     border-radius: 12px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-around;
 }
 
 /*fin de footer*/
@@ -219,6 +229,7 @@ button {
 label {
     margin:1rem;
     color: #ffffff;
+ 
 
 }
 
@@ -240,11 +251,12 @@ label {
     height: 70vh;
 }
 .container{
-    background-color: rgba(188, 143, 143, 0.672);
+    background-color: rgba(49, 47, 47, 0.672);
     width:33%; 
     border-radius: 15px;
-
+margin-top:3.5% ;
 }
+
 
 .form-newsletter {
     display: flex;
@@ -254,7 +266,7 @@ label {
 .photoblog{
     width:5%;
     height: 100px;
-    background-color: rgba(188, 143, 143, 0.672);
+    background-color: rgba(49, 47, 47, 0.672); 
     margin-right: 1rem;
     border-radius: 12px; 
     display: flex;
@@ -280,9 +292,117 @@ label {
    
 }
 .animespref{
-    display: grid;
-  grid-template-rows: minmax(100px, auto);
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
-   
 
+.animespref img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+p{
+color:  bisque; 
+  
+}
+.title-image{
+    width:100% ;
+    height: 100%;
+    border-radius:20%;
+    
+}
+@media only screen and (max-width: 720px) {
+    
+    nav {
+     width:85% ;
+     height: 60px; 
+     
+    }
+    footer {
+        width: 100%;
+       height: 10%; 
+    }
+   .photoblog{
+        margin:0%;
+        width:20% ;
+    }
+    header{
+        flex-direction: column;
+        align-items:center;
+    }
+    body .logoimage{
+        width: 100%; 
+        height:100%;
+    }
+    .animespref{
+        display: grid;
+        grid-template-rows: minmax(100px, auto);
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .intro{
+      width: 80%; 
+
+    }
+   h1{
+    text-align: center;
+  margin:0 ;
+   }
+   .container-img{
+    width: 10%;
+   }
+   
+}
+
+
+.slider-container {
+    max-width: 800px;
+    position: relative;
+    margin: auto;
+    height: 400px;
+    overflow: hidden;
+}
+.menu {
+    position: absolute;
+    left: 0;
+    z-index: 11;
+    width: 100%;
+    bottom: 0;
+    text-align: center;
+}
+.menu label {
+    cursor: pointer;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background: #ccc;
+    border-radius: 50px;
+    margin: 0 0.2em 1em;
+}
+.menu label:hover,.menu label:focus {
+    background: #1c87c9;
+}
+.slide-input{
+    opacity: 0;
+}
+.slide-img {
+    width: 100%;
+    height: 350px;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    z-index: 10;
+    transition: left 0s 0.75s;
+    object-fit: cover;
+}
+[id^="slide"]:checked + .slide-img {
+    left: 0;
+    z-index: 100;
+    transition: left 0.65s ease-out;
+}
+
+.actualite-film {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
